重构：移除字符集常量 重构：新增认证接口及公共抽象类